--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-09-02 23:03:44 +0900 
+%% Created for Yuka Fujii at 2015-09-04 22:26:43 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{stromgren1939,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1939ApJ....89..526S},
+	Author = {{Str{\"o}mgren}, B.},
+	Date-Added = {2015-09-04 13:26:24 +0000},
+	Date-Modified = {2015-09-04 13:26:43 +0000},
+	Doi = {10.1086/144074},
+	Journal = {\apj},
+	Month = may,
+	Pages = {526},
+	Title = {{The Physical State of Interstellar Hydrogen.}},
+	Volume = 89,
+	Year = 1939,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/144074}}
 
 @article{cumming2008,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -958,27 +973,6 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Volume = 475,
 	Year = 2007,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361:20077397}}
-
-@article{gorman2013,
-	Abstract = {Multi-wavelength centimeter continuum observations of non-dusty, non-pulsating K spectral-type red giants directly sample their chromospheres and wind acceleration zones. Such stars are feeble emitters at these wavelengths, however, and previous observations have provided only a small number of modest signal-to-noise measurements slowly accumulated over three decades. We present multi-wavelength Karl G. Jansky Very Large Array thermal continuum observations of the wind acceleration zones of two dust-free red giants, Arcturus (α Boo: K2 III) and Aldebaran (α Tau: K5 III). Importantly, most of our observations of each star were carried out over just a few days, so that we obtained a snapshot of the different stellar atmospheric layers sampled at different wavelengths, independent of any long-term variability. We report the first detections at several wavelengths for each star including a detection at 10 cm (3.0 GHz: S band) for both stars and a 20 cm (1.5 GHz: L band) detection for α Boo. This is the first time single (non-binary) luminosity class III red giants have been detected at these continuum wavelengths. Our long-wavelength data sample the outer layers of α Boo's atmosphere where its wind velocity is approaching (or possibly has reached) its terminal value and the ionization balance is becoming frozen-in. For α Tau, however, our long-wavelength data are still sampling its inner atmosphere, where the wind is still accelerating probably due to its lower mass-loss rate. We compare our data with published semi-empirical models based on ultraviolet data, and the marked deviations highlight the need for new atmospheric models to be developed. Spectral indices are used to discuss the possible properties of the stellar atmospheres, and we find evidence for a rapidly cooling wind in the case of α Boo. Finally, we develop a simple analytical wind model for α Boo based on our new long-wavelength flux measurements.},
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2013AJ....146...98O},
-	Archiveprefix = {arXiv},
-	Author = {{O'Gorman}, E. and {Harper}, G.~M. and {Brown}, A. and {Drake}, S. and {Richards}, A.~M.~S.},
-	Date-Added = {2015-03-30 06:52:17 +0000},
-	Date-Modified = {2015-03-30 06:52:37 +0000},
-	Doi = {10.1088/0004-6256/146/4/98},
-	Eid = {98},
-	Eprint = {1309.0860},
-	Journal = {\aj},
-	Keywords = {radio continuum: stars, stars: chromospheres, stars: individual: {$\alpha$} Boo {$\alpha$} Tau, stars: late-type, stars: winds, outflows},
-	Month = oct,
-	Pages = {98},
-	Primaryclass = {astro-ph.SR},
-	Title = {{Multi-wavelength Radio Continuum Emission Studies of Dust-free Red Giants}},
-	Volume = 146,
-	Year = 2013,
-	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-6256/146/4/98}}
 
 @article{ackerman+marley2001,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
