editing discussion (halfway)

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-09-04 22:26:43 +0900 
+%% Created for Yuka Fujii at 2015-09-05 17:18:00 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{dulk1994,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1994A%26A...286..683D},
+	Author = {{Dulk}, G.~A. and {Leblanc}, Y. and {Lecacheux}, A.},
+	Date-Added = {2015-09-05 07:54:51 +0000},
+	Date-Modified = {2015-09-05 07:54:58 +0000},
+	Journal = {\aap},
+	Keywords = {Circular Polarization, Electromagnetic Noise, Elliptical Polarization, Io, Jupiter (Planet), Polarization Characteristics, Radio Astronomy, Radio Sources (Astronomy), Astronomical Polarimetry, Noise Storms, Planetary Magnetospheres, Statistical Analysis},
+	Month = jun,
+	Pages = {683-700},
+	Title = {{The complete polarization state of Io-related radio storms from Jupiter: A statistical study}},
+	Volume = 286,
+	Year = 1994}
 
 @article{stromgren1939,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
