--- a/ms.tex
+++ b/ms.tex
@@ -975,25 +975,25 @@ More promising is the low frequency component of SKA, which will be able to dete
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Discriminating from Background:\\Time Variability}
+\subsection{Discriminating from Background}
 \label{ss:timevariability}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%In order to identify radio emission from exoplanets in the galactic background noise, it is 
 
-In order to identify radio emission from exoplanets, it is critical to discern it from the galactic background. 
-An important feature useful for this purpose is the time variability of radio emission. 
-Indeed, several processes cause the time variability of radio emission from exoplanets at different timescales; they are listed below from the ones typically with shorter timescales to those with longer timescales. 
+Since the confusion limit is on the same order as the signal (Table \ref{tab:sens}), it is crucial to consider the ways to discriminate the signal from the confusion sources. In this section, we discuss time variability and polarization as keys to identify the auroral radio emission from the planets. 
 
-\paragraph{Modulation due to planetary spin rotation (a few hours $\sim $)} 
-If the planetary spin axis is misaligned to the planetary magnetic axis, like Jupiter, the radio intensity will display sinusoidal modulation synchronously to the spin period.
+One of the key features that make planetary radio emission distinct is the almost complete polarization \citep[e.g.][]{dulk1994}. ...\memoYF{write here}
+s
+Another key is that auroral radio emission from planets is not a static source but it significantly varies in time. 
+The potential factors that cause time variability of the auroral radio emission are  listed below. 
+
+\paragraph{Modulation due to planetary spin rotation (a few hours $\sim $)}
+... \memoYF{write here}
 %
-
 \paragraph{Modulation due to the presence of satellites (a few hours $\sim $)}
- 
+... \memoYF{write here}
 
-
-\paragraph{Variability of stellar wind due to stellar oscillation (day $\sim $)?}
+\paragraph{Variability of stellar wind due to stellar oscillation (months $\sim $)?}
 Based on the correlation between the planetary radio emission and the solar wind plasma density also suggest that the radio emission from the planet around the evolved stars, which typically oscillate, are time variable.
 \memoYF{To Jason: time variability?}
 %
@@ -1003,10 +1003,19 @@ The former is because when the planet is behind the star the path of the radio e
 The probability of the latter one, secondary eclipse, is $\sim a/R_\star \sim 9$\% (in the case that $a=5~\mathrm{AU}$ and $R_{\star}=100R_{\odot }$). 
 %
 
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Discussion}
 \label{s:discussion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Implication for discovery and characterization of exoplanets}
+\label{ss:implication}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 
 
