discussion (S5.1) is added

--- a/ms.tex
+++ b/ms.tex
@@ -1016,14 +1016,24 @@ The probability of the latter one, secondary eclipse, is $\sim a/R_\star \sim 9$
 \label{ss:implication}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\memoYF{Need to elaborate. References are needed. }
 
+For now, it is difficult to detect planetary-mass companions around low-mass evolved stars through other means. The major difficulty in radial velocity measurement is the stellar pulsation (rms of $>30m/s$ for K giants). If the orbital period is long enough compared to the period of pulsation, it is possible to average out the pulsation and detect radial velocity of planetary component, but this requires long period monitoring. For transit observation Pulsation also contributes to the noise in detecting transit signals \memoYF{?} and besides the transit signals would be as low as 1ppm. Due to the great luminosity of the host star, direct imaging is also difficult \memoYF{?}. Thus, for the time being, one would have to aim at discovering planetary companions around evolved stars, rather than targeting at known planetary systems. 
+
+Once radio emission is detected, it provides some useful information through both time dependence and frequency dependence. 
+As mentioned in \S\ref{ss:timevariability}, auroral radio emission varies in association with several physical processes. In turn, radio emission could provide a unique pathway to get an idea of spin rotation period. (This is an advantage of searching for RGHJs rather than canonical hot Jupiters, because the latter is likely to be tidally locked to the stars.) 
+%
+Also, if the system is near edge-on, we will observe the time variability corresponding to orbital period, which can tell us the orbital distance of the planets. 
+
+
+Obviously, if the spectra could be obtained and the frequency cut-off is detected, it tells us the magnetic field strengths of the planetary surface. 
+Such information would be most useful if we could follow up the system by radial velocity to get constraints on the planetary mass, because with such information, we can contest the scaling laws of planetary magnetic field strength as a function of mass. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Luminosity function of planetary radio emission}
 \label{ss:Lfunc}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 In principle, if the expected luminosity function (LF) and positional distribution of possible RGHJ emitters were known one could estimate the likelihood of detecting RGHJs in radio surveys. For illustration we consider a hypothetical power-law distribution for the RGHJ luminosity function $N(L) \propto L^{-\alpha}$, where, $N(L)$ is the number of objects per unit volume with a luminosity of L, and assume an isotropic distribution of sources in the observed volume. Under these assumptions, the observed flux from the brightest source in a volume limited sample will scale with distance as $f_{\rm max} \propto d^{\frac{3}{\alpha} - 2}$, implying that the likelihood of finding the brightest source increases with distance for $\alpha < 3/2$. Such a scenario would indeed be favorable to detect RGHJs given that AGB stars, which are good sources for bright RGHJs due to their high mass loss rates, are rare and would require probing out to larger distances for detection. For example, for an $N(L) \propto L^{-1}$ the brightest source within a given distance will increase linearly with distance, making it favorable for detecting intrinsically rare objects. Therefore, it is important to determine the LF for RGHJ emitters in order to estimate their detectability. 
 
