--- a/ms.tex
+++ b/ms.tex
@@ -1105,16 +1105,18 @@ Therefore, unless the density increases more drastically than $1/r^5$, the ratio
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
 \label{sec:conc}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-In this paper, we propose that ``hot Jupiters'' around evolved stars (RGHJ) may be bright radio wave emitters, on the assumption of the simple empirical correlation between the radio emission and the kinetic input energy. 
-Massive stellar wind of red giants and AGB stars would put the kinetic energy into magnetospheres of distant Jovian planets, which could lead to the intrinsic bright radio emission, comparable to or greater than canonical hot Jupiters in close-in orbits. 
+In this paper, we estimate the radio brightness of distant ``hot Jupiters'' around evolved stars (RGHJ) on the assumption of the simple empirical correlation between the radio emission and the kinetic input energy. 
+Unlike the previous paper, we consider that X-ray from the accretion disk around the planetary companion ionizes the stellar wind in the vicinity of planets, which would otherwise fairly neutral. 
+Based on such picture, massive stellar wind of red giants and AGB stars would interact with planetary magnetic field and puts the kinetic energy into magnetospheres of RGHJs. We found that the RGHJs would generate bright radio emission, comparable to or greater than canonical hot Jupiters in close-in orbits around main-sequence stars. 
 
-% -
-% - the obstacle is not the ionization fraction but the plasma cut-off 
+A major obstacle to observe this radio emission is the plasma cut-off frequency of the (ionized) stellar wind. Due to great density of the stellar wind, the cut-off frequency is as high as $\sim 15 MHz$ for typical red giants and $\sim 464 MHz$ for typical AGB stars. Therefore, massive planetary companions with magnetic field stronger than Jupiter should be targeted at. 
 
-The maximum radio emission we can expect to observe is limited by the plasma cut-off frequency of the stellar wind in the vicinity of the planets. 
-For a planet with the same magnetic moment as Jupiter, the maximum radio emission from the planets which can penetrate through the surrounding plasma is $\sim 10^{-3}$ Jy or $\sim 10^{-5}$ Jy at 10~pc and 100~pc, respectively.
-As we showed in \S\ref{ss:detectability}, the upper end of this range is detectable with the current generation of radio facilities, while farther hot Jupiters should soon be detectable using the next generation of instruments.
+The radio flux from a system with an exoplanet at 5 AU at a distance of 100 pc would be typically on the order of $\sim 10 \mu $Jy. 
+Such signals would be detectable with SKA within a day or so. 
+For a few nearest systems, or for systems with exoplanets in closer orbit, LOFAR-HBA  would also work with a reasonable integration time. 
+In both cases, it is critical to consider the time variability of the flux, in order to identify the signal from confusion sources. 
 
 Admittedly, uncertainties exist in the relation between radio emission of Jovian planets and the input energy from stellar wind, as well as in the scaling of planetary magnetic field. 
 Alternatively, once we detect both the gravitational perturbation and radio emission of Jovian planets, these models will be contested.
