Move comment to new line.

--- a/ms.tex
+++ b/ms.tex
@@ -982,8 +982,9 @@ More promising is the low frequency component of SKA, which will be able to dete
 
 Since the confusion limit is on the same order as the signal (Table \ref{tab:sens}), it is crucial to consider the ways to discriminate the signal from the confusion sources. In this section, we discuss time variability and polarization as keys to identify the auroral radio emission from the planets. 
 
-One of the key features that make planetary radio emission distinct is the almost complete polarization \citep[e.g.][]{dulk1994}. ...\memoYF{write here}
-s
+One of the key features that make planetary radio emission distinct is the almost complete polarization \citep[e.g.][]{dulk1994}.
+...\memoYF{write here}
+
 Another key is that auroral radio emission from planets is not a static source but it significantly varies in time. 
 The potential factors that cause time variability of the auroral radio emission are  listed below. 
 
