Minor edits to code style and some comments added.

--- a/code/ionizedsphere.ipynb
+++ b/code/ionizedsphere.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,36 +19,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.99792458\n"
+     ]
+    }
+   ],
+   "source": [
+    "print constants.c / 1.e8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So `constants` has values in MKS."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def planck(wl, *args):\n",
-    "    Temp, = args\n",
-    "    fac = constants.h*constants.c/(wl*constants.k*Temp)\n",
-    "    return 2.0*constants.h*constants.c**2/(wl**5)/(np.exp(fac)-1.0)"
+    "    \"\"\"\n",
+    "    Returns the Planck function evaluated at wavelength wl and temperature temp.\n",
+    "    \"\"\"\n",
+    "    wl = np.array(wl)\n",
+    "    temp, = args\n",
+    "    fac = constants.h * constants.c / (wl * constants.k * temp)\n",
+    "    return (2.0 * constants.h * constants.c**2 / (wl**5)) * (1. / (np.exp(fac) - 1.))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def planck_photon(wl, *args):\n",
-    "    Temp, = args\n",
-    "    fac = constants.h*constants.c/(wl*constants.k*Temp)\n",
-    "    energy_per_photon = constants.h*constants.c/wl\n",
-    "    return 2.0*constants.h*constants.c**2/(wl**5)/(np.exp(fac)-1.0)/energy_per_photon"
+    "    \"\"\"\n",
+    "    Returns the thermal intensity of photons at wavelength wl and temperature temp.\n",
+    "    \"\"\"\n",
+    "    wl = np.array(wl)\n",
+    "    energy_intensity = planck(wl, *args)\n",
+    "    energy_per_photon = constants.h * constants.c / wl\n",
+    "    return energy_intensity / energy_per_photon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.76806236e-07   1.43404410e+02]\n",
+      "[  8.90063281e+11   1.44382916e+21]\n"
+     ]
+    }
+   ],
+   "source": [
+    "wls = [1.e-6, 2.e-6]\n",
+    "temp = 300.\n",
+    "print planck(wls, temp)\n",
+    "print planck_photon(wls, temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +115,7 @@
        "1350.778497996132"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -101,6 +157,17 @@
      "text": [
       "5.67217787748e+16\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/scipy/integrate/quadpack.py:352: IntegrationWarning: The algorithm does not converge.  Roundoff error is detected\n",
+      "  in the extrapolation table.  It is assumed that the requested tolerance\n",
+      "  cannot be achieved, and that the returned result (if full_output = 1) is \n",
+      "  the best which can be obtained.\n",
+      "  warnings.warn(msg, IntegrationWarning)\n"
+     ]
     }
    ],
    "source": [
@@ -110,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +212,7 @@
        "176355241533.4935"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/kernel/__main__.py:5: RuntimeWarning: overflow encountered in exp\n"
+      "/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/kernel/__main__.py:8: RuntimeWarning: overflow encountered in exp\n"
      ]
     }
    ],
@@ -214,6 +281,13 @@
    },
    "outputs": [],
    "source": [
+    "# DSS COMMENT: I recommend not using \"magic numbers\"\n",
+    "# https://en.wikipedia.org/wiki/Magic_number_(programming)#Unnamed_numerical_constants\n",
+    "# I assume the 5.0 is AU?  I don't know what the 1e3 or the 1.8e6 are, though.\n",
+    "# It would be easier to follow the code if you replace all magic numbers with named constants.\n",
+    "# You can use some judgment here, like the \"**(-2)\" exponent doesn't need to be named,\n",
+    "# but I would name nearly everything else -- even obvious things like 13.6, which could be\n",
+    "# named \"Rydberg\" or something similar.\n",
     "density = 1e3 * 1.8e6 * (orbit / 5.0 )**(-2) # [cm^{-3}]"
    ]
   },
@@ -233,6 +307,8 @@
     }
    ],
    "source": [
+    "# DSS COMMENT: Isn't the calculation up to here in MKS, not cgs?  Do we want AU_to_m instead?\n",
+    "# Not sure about this one....\n",
     "AU_to_cm = 1.49597870700e13\n",
     "stromgren = 3.0 / ( 4.0 * np.pi ) * ( source / ( density**2 * beta ) )**(1.0/3.0) / AU_to_cm\n",
     "print stromgren, \"[AU]\""
@@ -264,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
